fix positioning on mobile elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -1007,6 +1007,11 @@ footer {
     width: 100%;
   }
 
+  .third-hd-links {
+    display: block;    
+    margin-left: 23px;
+  }
+
   .grid-img figcaption a {
     font-weight: 600;
     line-height: 1.5;
@@ -1104,7 +1109,7 @@ footer {
 
 @media only screen and (max-width: 375px) {
   .gr-i-ft {
-    margin-left: 24%;
+    margin-left: 28%;
   }
 
   .fist-footer img {
